# ddd-python-env

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
app/: kafka_consumer.py  kafka_producer.py  main.py  models.py
scripts/: create-topics.sh
